# event-episode-wyscout

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/pages/: clear_episodes.py
memo/: 20250520-v-fctokyo.md  20250520-wyscout-episode-separation.md  20250523-issues.md  20250525-split-algorithm.md
src/episode_split/: __init__.py  helper.py
src/episode_split/episode/: characterize.py  split.py
src/episode_split/legacy/episode/: FootballEventFilter.py  episode.py
src/episode_split/legacy/utils/: io.py  runner.py  standard_IO.py  statistics.py  timer.py
src/episode_split/legacy/utils/episodes/: data_row.py
src/episode_split/segment/: segment.py
src/episode_split/visualization/: draw.py
src/event_episode_wyscout/: helper.py
src/event_episode_wyscout/episode/: __init__.py  base.py  episode.py  split.py
src/event_episode_wyscout/legacy/datasets/: playerank.py
src/event_episode_wyscout/legacy/episode/: base.py  episode.py
src/event_episode_wyscout/legacy/utils/: conf.py
src/event_episode_wyscout/legacy/utils/episodes/: data_row.py
src/event_episode_wyscout/segment/: segment.py
src/event_episode_wyscout/utils/: const_event_visualizer.py  coordinates.py  lstm_episodes.py  match_info.py
src/event_episode_wyscout/utils/episodes/: data_row.py  location.py
src/event_episode_wyscout/visualization/: dataframe.py  draw.py
