[project]
name = "event-episode-wyscout"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "gshirato", email = "g8ta18@gmail.com" }]
dependencies = [
    "omegaconf>=2.3.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/event_episode_wyscout"]
