[project]
name = "event-episode-wyscout"
version = "0.2.1"
description = "Add your description here"
authors = [{ name = "gshirato", email = "g8ta18@gmail.com" }]
dependencies = [
    "omegaconf>=2.3.0",
    "numpy",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "wyscout-api @ git+ssh://git@github.com/gshirato/wyscout-api.git@main",
    "data-container @ git+ssh://git@github.com/gshirato/data-container.git",
    "streamlit>=1.45.1",
    "mplsoccer>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/episode_split"]
